--- a/src/App.css
+++ b/src/App.css
@@ -195,6 +195,14 @@
   object-fit: cover;
   position: absolute;
   height: 200px;
-  width: 200px;
-  
+  width: 200px; 
+}
+
+/* ABOUT CSS */
+
+.about-main-container {
+  display: flex;
+  flex-direction: column;
+  border: 3px solid black;
+  padding: 10px;
 }
