--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Mouse+Memoirs&display=swap');
+
+* {
+  font-family: 'Bubblegum Sans', cursive;
+}
+
 /* HOME CSS */
 
 .navbar {
@@ -209,74 +215,160 @@
 
 .show-container {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+  flex-direction: column;
+  width: 70%;
+  height: 90vh;
+  border: 20px solid darkgoldenrod;
+  border-radius: 10px;
+  background-color: bisque;
+  padding: 5px;
 }
 
-.show-column-1-container {
+.show-image-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  height: 45%;
+  
 }
 
 .show-image-column {
+  height: 100%;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-}
-
-.show-column-1 {
-  display: flex;
-  flex-direction: column;
-  border: 1px blue solid;
-  width: 45%;
-  height: 90vh;
-  overflow: scroll;
-}
-
-.show-column-2 {
-  display: flex;
-  flex-direction: column;
-  border: 1px red solid;
-  width: 50%;
-  height: 90vh;
+  flex-direction: row;
+  position: relative;
 }
 
 .show-image {
-  height: 45%;
-  width: 100%;
-  object-fit: cover;
+  object-fit: contain;
+  height: 100%;
+  width: 50%;
 }
 
-.stats-column {
+.show-names-column {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: flex-start;
+  
+}
+
+.show-name-text, .show-alias-text {
+  width: 80%;
+  height: 20%;
+  margin-bottom: 10px;
+  transform: skew(20deg);
+  display: flex;
+  align-items: center;
+  padding-left: 5px;
+  position: relative;
+  font-weight: bold;
+}
+
+.show-name-text {
+  font-size: xx-large;
+}
+
+.show-alias-text {
+  font-size: large;
+}
+
+.show-data-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.show-column-1, .show-column-2 {
+  margin: 10px;  
+}
+
+.show-column-1 {
+  background-color: lightblue;
+  width: 30%;
   height: 45%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  padding: 5px;
+  font-size: large;
+  overflow: hidden;
+  position:absolute;
+  left: 2%;
+  border: 2px solid black;
+}
+
+.show-column-1-headers {
+  font-weight: bold;
+}
+
+.show-column-2 {
+  width: 55%;
+  height: 65%;
   font-size: xx-large;
-  padding: 10px;
+  position: relative;
+  right: -23%;
+}
+
+.single-stat-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.stats-text-container {
+  margin: 5px;
+  width: 70%;
+  transform: skew(-20deg);
+  padding-left: 5px;  
+}
+
+.stats-number-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin: 2px;
+}
+
+.stats-text-container, .stats-number-container, .show-name-text, .show-alias-text {
+  box-shadow: black 5px 4px;
+  background-color: yellow;
 }
 
 .show-button-container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  height: 50%;
 }
 
 .show-button {
-  width: 60%;
-  padding: 5px;
+  width: 40%;
+  height: 50%;
+  background-color: lightblue;
+  box-shadow: black 3px 3px;
+  font-size: large;
+  font-weight: bold;
+}
+
+.show-footer-text {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .show-related-column {
   display: flex;
   background-color: orange;
-  height: 55%;
-  overflow: scroll;
+  height: 10px;
+  overflow: hidden;
   flex-direction: column;
 }
 
 .related-title-container {
-  background-color: white;
+  background-color: orange;
   text-align: center;
 }
 
@@ -288,24 +380,46 @@
 }
 
 .show-card {
-  border: red solid 5px;
-  width: 300px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   margin: 10px;
   overflow: hidden;
-  border-radius: 200px;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .related-card-image {
-  object-fit: contain;
-  height: 100%;
-  width: 100%;
-  
+  object-fit: contain;  
 }
 
+
+
+/* BATTLEWORLD CSS */
+
+.battleworld-container {
+  background-color: lightblue;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.battleworld-hero-container {
+  text-align: center;
+  border: red solid 3px;
+  background-color: white;
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
 
 
 
