--- a/src/App.css
+++ b/src/App.css
@@ -213,12 +213,35 @@
 
 /* SHOW CSS */
 
+.show-background-image {
+  background-image: url('https://www.thewallpaperpeople.com.au/images/detailed/8/JL1398M_Marvel_Comic_Panel_XL_WallpaperMural.jpg');
+  background-position: center;
+  background-size: cover;
+}
+
+.show-page {
+  display: flex;
+  justify-content: center;
+  
+  
+  background-color: lightgray;
+}
+
+.show-page-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .show-container {
+  margin-top: 10px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
-  width: 70%;
+  box-shadow: rgb(18, 18, 18) 2px 3px;
+  width: 45vw;
   height: 90vh;
-  border: 20px solid darkgoldenrod;
+  border: 20px solid rgb(234, 212, 187);
   border-radius: 10px;
   background-color: bisque;
   padding: 5px;
@@ -228,7 +251,6 @@
   display: flex;
   flex-direction: row;
   height: 45%;
-  
 }
 
 .show-image-column {
@@ -242,35 +264,49 @@
 .show-image {
   object-fit: contain;
   height: 100%;
-  width: 50%;
+  width: 50vw;
 }
 
 .show-names-column {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
-  justify-content: flex-start;
-  
+  height: 100%;
+  position: relative;
+  margin-top: 5%;
+  left: -15%;
 }
 
-.show-name-text, .show-alias-text {
-  width: 80%;
+.show-name-text, .show-alias-text, .show-bio-text {
   height: 20%;
   margin-bottom: 10px;
   transform: skew(20deg);
   display: flex;
   align-items: center;
   padding-left: 5px;
-  position: relative;
   font-weight: bold;
 }
 
 .show-name-text {
-  font-size: xx-large;
+  font-size: 50px;
+  width: 140%;
 }
 
 .show-alias-text {
-  font-size: large;
+  font-size: x-large;
+  width: 120%;
+}
+
+.show-bio-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  height: 30%;
+  box-shadow: black 5px 4px;
+  background-color: lightblue;
 }
 
 .show-data-row {
@@ -287,15 +323,14 @@
 
 .show-column-1 {
   background-color: lightblue;
-  width: 30%;
-  height: 45%;
+  width: 40%;
+  height: 90%;
   display: flex;
   flex-direction: column;
   padding: 5px;
   font-size: large;
   overflow: hidden;
-  position:absolute;
-  left: 2%;
+  position:relative;
   border: 2px solid black;
 }
 
@@ -304,11 +339,10 @@
 }
 
 .show-column-2 {
-  width: 55%;
+  width: 50%;
   height: 65%;
   font-size: xx-large;
   position: relative;
-  right: -23%;
 }
 
 .single-stat-container {
@@ -340,61 +374,47 @@
 
 .show-button-container {
   display: flex;
-  justify-content: center;
+  justify-content:space-evenly;
   align-items:center;
   height: 50%;
 }
 
 .show-button {
-  width: 40%;
-  height: 50%;
+  width: 60%;
+  height: 90px;
   background-color: lightblue;
   box-shadow: black 3px 3px;
   font-size: large;
   font-weight: bold;
 }
 
-.show-footer-text {
+.related-column {
   display: flex;
-  justify-content: flex-end;
-}
-
-.show-related-column {
-  display: flex;
-  background-color: orange;
-  height: 10px;
-  overflow: hidden;
-  flex-direction: column;
-}
-
-.related-title-container {
-  background-color: orange;
-  text-align: center;
-}
-
-.show-related-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
   justify-content: center;
+  height: 100vh;
+  margin-left: 5%; 
 }
 
-.show-card {
+.related-container {
+  background-color: bisque;
+  border-left: 20px solid rgb(234, 212, 187);
+  border-right: 20px solid rgb(234, 212, 187);
+  height: 100%;
+  width: 100%;
+  overflow: scroll;
+}
+
+.related-card {
   width: 150px;
   height: 150px;
   margin: 10px;
   overflow: hidden;
   border-radius: 50%;
+  border: 2px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-.related-card-image {
-  object-fit: contain;  
-}
-
-
 
 /* BATTLEWORLD CSS */
 
