--- a/src/App.css
+++ b/src/App.css
@@ -418,6 +418,12 @@
 /* BATTLEWORLD CSS */
 
 .battleworld-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.battleworld-card-container {
   background-color: lightblue;
   height: 100vh;
   display: flex;
@@ -438,6 +444,11 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+.statusupdate {
+  background-color: yellow;
+  text-align: center;
 }
 
 
